# edupage-c

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  readme.md
.github/workflows/: cmake-multi-platform.yml
include/edupage/: edupage.h
src/: CMakeLists.txt  edupage.c
tests/: CMakeLists.txt  all.c  login.c
